testsuite/poke.pkl/struct-method-diag-7.pk
/* { dg-do compile } */

fun foo = void:
  {
    method bar = void: {} bar; /* { dg-error "method" } */
  }
